remove sun.misc.BASE64Encoder/BASE64Decoder dependency